# repo-review

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .readthedocs.yml  AGENTS.md  LICENSE  README.md  action.yml  bunfig.toml  eslint.config.mjs  noxfile.py  package.json  profile.prof  pyproject.toml  tsconfig.json  tsconfig.test.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml  deploy-pages.yml  web.yml
docs/: changelog.md  checks.md  cli.md  conf.py  families.md  files.md  fixtures.md  ghpath.py  index.html  index.md  intro.md  live-demo.md  plugins.md  programmatic.md  webapp.js  webapp.md
docs/_static/scripts/: index.html
docs/api/: repo_review.resources.rst  repo_review.rst
src/repo-review-app/: anywidget.tsx  index.html  main.tsx  repo-review-app.test.tsx  repo-review-app.tsx  test-setup.ts  webapp.jsx  webapp.tsx
src/repo-review-app/components/: Heading.jsx  Heading.tsx  IfUrlLink.jsx  IfUrlLink.test.tsx  IfUrlLink.tsx  MyThemeProvider.jsx  MyThemeProvider.tsx  Results.jsx  Results.tsx
src/repo-review-app/utils/: github.js  github.test.ts  github.ts  injectFonts.ts  pyodide-common.ts  pyodide-worker.ts  pyodide.js  pyodide.ts  pyodideClient.ts  pyodideWorker.ts  url.test.ts  url.ts
src/repo_review/: __init__.py  __main__.py  _timer.py  checks.py  families.py  files.py  fixtures.py  ghpath.py  html.py  processor.py  schema.py  testing.py
src/repo_review/_compat/: tomllib.py  typing.py
src/repo_review/_compat/importlib/resources/: abc.py
src/repo_review/resources/: __init__.py  repo-review.schema.json
src/scikit_hep_repo_review/: __init__.py  __main__.py  checks.py  families.py  fixtures.py  ghpath.py  processor.py
src/scikit_hep_repo_review/checks/: __init__.py  general.py  github.py  precommit.py  pyproject.py  ruff.py
src/scikit_hep_repo_review/ratings/: __init__.py  flake8.py  general.py  github.py  mypy.py  precommit.py  pyproject.py  ruff.py
src/scikit_hep_review/: __init__.py
src/scikit_hep_review/ratings/: general.py  mypy.py
tests/: conftest.py  test_async_ghpath.py  test_checks.py  test_cmd.py  test_depends.py  test_families.py  test_fixtures.py  test_ghpath.py  test_multi.py  test_package.py  test_self.py
tests/test_utilities/: pyproject.py  pyproject.toml
web/: ghpath.py  index.html
