[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"

[project]
name = "pyproject"
version = "0.0.1"
classifiers = [
    "Private :: Do Not Upload",
]
description = "Simple repo-review example for testing"

[project.entry-points."repo_review.checks"]
pyproject = "pyproject:repo_review_checks"
[project.entry-points."repo_review.families"]
pyproject = "pyproject:repo_review_families"

[tool.example]


[tool.repo-review.ignore]
"PP999" = "One skip"
"X" = "Group skip"

[tool.repo-review-local]
extra = true
